Add license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "tuenti/composer-placeholder",
     "description": "Placeholder package for Tuenti",
-    "require": {}
+    "require": {},
+    "license": "Unlicense"
 }
